--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "stm32-hal2"
 version = "1.5.2"
-authors = ["David O'Connor <david.alan.oconnor@gmail.com>"]
+authors = ["David O'Connor <david.alan.oconnor@gmail.com>", "James Gaitan <jgaitan.code@gmail.com"]
 description = "Hardware abstraction layer for the STM32 MCUs"
 keywords = ["no-std", "stm32", "embedded", "embedded-hal"]
 categories = [
@@ -22,6 +22,7 @@ cortex-m = "0.7.3"
 # Peripheral Access Crates
 stm32f3 = { version = "0.15.1", optional = true }
 stm32f4 = { version = "0.15.1", optional = true }
+stm32l1 = { version = "0.15.1", optional = true }
 stm32l4 = { version = "0.15.1", optional = true }
 stm32l5 = { version = "0.15.1", optional = true }
 stm32g0 = { version = "0.15.1", optional = true }
@@ -66,6 +67,7 @@ targets = ["thumbv7em-none-eabihf"]
 [features]
 f3rt = ["stm32f3/rt"]
 f4rt = ["stm32f4/rt"]
+l1rt = ["stm32l1/rt"]
 l4rt = ["stm32l4/rt"]
 l5rt = ["stm32l5/rt"]
 g0rt = ["stm32g0/rt"]
@@ -96,6 +98,11 @@ f427 = ["stm32f4/stm32f427", "f4"]
 f429 = ["stm32f4/stm32f429", "f4"]
 f446 = ["stm32f4/stm32f446", "f4"]
 f469 = ["stm32f4/stm32f469", "f4"]
+
+# [L1](https://docs.rs/crate/stm32l1/latest/source/Cargo.toml)
+l100 = ["stm32l1/stm32l100", "l1"]
+l151 = ["stm32l1/stm32l151", "l1"]
+l162 = ["stm32l1/stm32l162", "l1"]
 
 # [L4](https://docs.rs/crate/stm32l4/latest/source/Cargo.toml)
 l4x1 = ["stm32l4/stm32l4x1", "l4"]
@@ -164,6 +171,7 @@ embedded_hal = ["embedded-hal", "nb"]
 # to an entire family.
 f3 = []
 f4 = []
+l1 = []
 l4 = []
 l5 = []
 g0 = []
